[tool.poetry]
name = "asbe-simulation"
version = "0.1.0"
description = ""
authors = ["Zoltan Puha <zoltan.puha@zalando.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
scipy = "1.11.3"
econml = "^0.14.1"
asbe = "^0.1.1"
pymc-bart = "^0.5.2"
xbart = "0.1.8"
gpy = {git = "https://github.com/SheffieldML/GPy.git", rev = "devel"}
fastcore = "^1.5.29"
scikit-uplift = "^0.5.1"
pyopenbt = {git = "https://github.com/cavan33/openbt_py.git"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
